--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.13.7",
+    "nodemon": "^2.0.12",
     "pug": "^3.0.2"
   },
   "description": ""
